--- a/uMeat.html
+++ b/uMeat.html
@@ -6,12 +6,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" href="uMeat/style.css" />
-  <!-- <link rel="stylesheet" href="CV/style.css" />
-  <link rel="stylesheet" href="queries.css" />
-  <link rel="stylesheet" href="CV/queries.css" /> -->
+  <link rel="stylesheet" href="uMeat/queries.css" />
+
 
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -40,7 +39,7 @@
 
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <!-- <img src="uMeat/umeat1.PNG" class="nav-img"> -->
+        <img src="uMeat/umeat1.PNG" class="nav-img2">
         <li><a class="main-nav-link" href="#deals">Promotions</a></li>
         <li><a class="main-nav-link" href="#menu">Menu</a></li>
         <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
@@ -79,6 +78,83 @@
       <div class="deals-text">
         <div>Deals under $20!</div>
       </div>
+    </section>
+
+    <section class="deals-container_2">
+      <div class="deals-info_2 active">
+        <div>
+          <picture><img src="uMeat/burger.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Wagyu Beef Burger</div>
+        <div class="deals-info-text2">Cheeseburger with lettuce, tomato & truffle mayo</div>
+        <div class="deals-info-text3">$19.80</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/chickenchop.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Fried Chicken Chop</div>
+        <div class="deals-info-text2">Deep-fried succulent chicken breast with french fries</div>
+        <div class="deals-info-text3">$18.80</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/lambchop.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Grilled Lamb Chop</div>
+        <div class="deals-info-text2">Tender, juicy lamb chop served with honey mustard</div>
+        <div class="deals-info-text3">$18.90</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/fishandchips.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Seabass Fillet</div>
+        <div class="deals-info-text2">Pan fried sea bass topped with cherry tomatoes and salsa</div>
+        <div class="deals-info-text3">$19.90</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/sausage.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Grilled Bratwurst</div>
+        <div class="deals-info-text2">Pork / Chicken sausages coupled with crispy fries</div>
+        <div class="deals-info-text3">$17.90</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/pizza.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Laksa Pizza</div>
+        <div class="deals-info-text2">Fusion of Italian chicken ham pizza with our creamy Laksa sauce</div>
+        <div class="deals-info-text3">$17.80</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/pasta.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Seafood Aglio Olio</div>
+        <div class="deals-info-text2">Fresh prawns, squid and scallops with tomato sauce</div>
+        <div class="deals-info-text3">$18.80</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/chickenrice.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Chicken Briyani</div>
+        <div class="deals-info-text2">Buttery, fragrant basmati rice with roasted chicken drumstick</div>
+        <div class="deals-info-text3">$18.90</div>
+      </div>
+      <div class="deals-info_2">
+        <div>
+          <picture><img src="uMeat/satay.jpg"></picture>
+        </div>
+        <div class="deals-info-text">Satay Platter</div>
+        <div class="deals-info-text2">Perfectly grilled and nicely charred chicken thigh on skewers</div>
+        <div class="deals-info-text3">$16.90</div>
+      </div>
+      <div id="nav-button--prev_2" class="slider__nav-button_2"></div>
+      <div id="nav-button--next_2" class="slider__nav-button_2"></div>
     </section>
 
     <section class="deals-container">
