--- a/uMeat.html
+++ b/uMeat.html
@@ -374,6 +374,14 @@
       <div class="locate-text">
         <div>Visit us today!</div>
       </div>
+      <div class="locate-us">
+        <div class="address">
+          <div>#01-18 Fancy Avenue @ Downtown Reservoir</div>
+          <div>Nearest MRT Station: Downtown</div>
+          <div>Leave via Exit C and turn right - you'll see us right away!</div>
+        </div>
+        <picture><img src="uMeat/store.jpg"></picture>
+      </div>
     </section>
 
 
@@ -384,7 +392,38 @@
 
 </body>
 
+<footer class="footer">
+  <div class="container grid grid--footer">
+    <div class="logo-col">
+      <a class="footer-logo">
+        <p><strong>Other Social Media Channels:</strong></p>
+      </a>
 
+      <ul class="social-links">
+        <li>
+          <a class="footer-link" href="#"">
+            <ion-icon class=" social-icon" name="logo-instagram"></ion-icon>
+          </a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">
+            <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
+          </a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">
+            <ion-icon class="social-icon" name="logo-twitter"></ion-icon>
+          </a>
+        </li>
+      </ul>
+
+      <p class="copyright">
+        Copyright &copy; <span class="year">2022</span> by Darius Koh Yu Feng.
+        All rights reserved.
+      </p>
+    </div>
+  </div>
+</footer>
 
 
 
