--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           </a>
         </li>
         <li>
-          <a class="footer-link" href="https://www.facebook.com/KohYuFeng/" target="_blank">
+          <a class="footer-link" href="Grub.html" target="_blank">
             <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
           </a>
         </li>
