--- a/Grub.html
+++ b/Grub.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" href="Brag/style.css" />
   <link rel="stylesheet" href="Brag/style_v2.css" />
@@ -293,7 +293,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- MART -->
               <div class="v2">
                 <div><img src="Brag/gallery/mart.jpg" class="v2_img"></div>
@@ -303,7 +303,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- EXPRESS -->
               <div class="v2 v2_last">
                 <div><img src="Brag/gallery/express.jpg" class="v2_img"></div>
@@ -335,7 +335,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- INSURANCE -->
               <div class="v2">
                 <div><img src="Brag/gallery/insurance.jpg" class="v2_img"></div>
@@ -345,7 +345,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- Invest -->
               <div class="v2">
                 <div><img src="Brag/gallery/invest.jpg" class="v2_img"></div>
@@ -370,7 +370,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- MART -->
               <div class="v2">
                 <div><img src="Brag/gallery/mart.jpg" class="v2_img"></div>
@@ -380,7 +380,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- EXPRESS -->
               <div class="v2 v2_last">
                 <div><img src="Brag/gallery/express.jpg" class="v2_img"></div>
@@ -412,7 +412,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- INSURANCE -->
               <div class="v2">
                 <div><img src="Brag/gallery/insurance.jpg" class="v2_img"></div>
@@ -422,7 +422,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- Invest -->
               <div class="v2">
                 <div><img src="Brag/gallery/invest.jpg" class="v2_img"></div>
@@ -446,7 +446,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- DELIVER WITH US -->
               <div class="v2">
                 <div><img src="Brag/gallery/deliverwithus.jpg" class="v2_img"></div>
@@ -470,7 +470,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- PAYMENTS WITH US -->
               <div class="v2">
                 <div><img src="Brag/gallery/paymentwithus.jpg" class="v2_img"></div>
@@ -494,7 +494,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- FOOD -->
               <div class="v2">
                 <div><img src="Brag/gallery/food2.jpg" class="v2_img"></div>
@@ -504,7 +504,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- BUSINESS RIDES -->
               <div class="v2">
                 <div><img src="Brag/gallery/businessrides.jpg" class="v2_img"></div>
@@ -514,7 +514,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- FINANCIAL SERVICES -->
               <div class="v2">
                 <div><img src="Brag/gallery/financialservices.jpg" class="v2_img"></div>
@@ -524,7 +524,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- GIFT CARDS -->
               <div class="v2">
                 <div><img src="Brag/gallery/giftcards.jpg" class="v2_img"></div>
@@ -534,7 +534,7 @@
                 </div>
               </div>
               <!-- EMPTY -->
-              <div></div>
+              <div class="empty"></div>
               <!-- ADS -->
               <div class="v2 v2_last">
                 <div><img src="Brag/gallery/ads.jpg" class="v2_img"></div>
