--- a/Grub.html
+++ b/Grub.html
@@ -288,7 +288,7 @@
               <div class="v2">
                 <div><img src="Brag/gallery/food.jpg" class="v2_img"></div>
                 <div>
-                  <h3>Food</h3>
+                  <h3><a href="Brag/GrubFood/GrubFood.html" target="_blank">Food</a></h3>
                   <div>Have all your cravings delivered to your doorstep.</div>
                 </div>
               </div>
@@ -365,7 +365,7 @@
               <div class="v2">
                 <div><img src="Brag/gallery/food.jpg" class="v2_img"></div>
                 <div>
-                  <h3>Food</h3>
+                  <h3><a href="Brag/GrubFood/GrubFood.html" target="_blank">Food</a></h3>
                   <div>Have all your cravings delivered to your doorstep.</div>
                 </div>
               </div>
