--- a/Brag/GrubFood/GrubFood.html
+++ b/Brag/GrubFood/GrubFood.html
@@ -21,6 +21,8 @@
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
 
 
   <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
@@ -377,9 +379,71 @@
       <div class="overlay overlay2">Learn More</div>
     </section>
 
-    <!-- <section class="description">
+    <section class="description">
       <div class="overview">FAQs</div>
-    </section> -->
+    </section>
+
+    <section class="orders faq">
+      <div class="orders-flex">
+        <h3>Got questions? We’ve got answers.</h3>
+        <div>For more questions, please visit our <span class="helpcentre">Help Centre</span>.</div>
+      </div>
+      <div class="instantdelivery-background">
+        <div class="faq-grid">
+          <button class="collapsible">
+            <div>How much does it cost to order from GrubFood?</div>
+            <span class="material-symbols-outlined faq-sign">
+              add
+            </span>
+          </button>
+          <div class="content">
+            <span class="material-symbols-outlined faq-sign">
+              subdirectory_arrow_right
+            </span>
+            <p>Your order’s total cost includes the price of the menu items plus a delivery fee. The delivery fees
+              help us pay our delivery-partners and provide the best service possible.</p>
+          </div>
+          <button class="collapsible">
+            <div>What are your delivery fees?</div>
+            <span class="material-symbols-outlined faq-sign">
+              add
+            </span>
+          </button>
+          <div class="content">
+            <span class="material-symbols-outlined faq-sign">
+              subdirectory_arrow_right
+            </span>
+            <p>Our delivery fees are calculated based on distance between the pick-up and drop-off locations.</p>
+          </div>
+          <button class="collapsible">
+            <div>What are your hours?</div>
+            <span class="material-symbols-outlined faq-sign">
+              add
+            </span>
+          </button>
+          <div class="content">
+            <span class="material-symbols-outlined faq-sign">
+              subdirectory_arrow_right
+            </span>
+            <p>Depending on your area and local restaurant hours, we begin delivering as early as 7 am, and run as late
+              as 2 am. If a particular restaurant is not available for delivery, you will see it closed on the app.</p>
+          </div>
+          <button class="collapsible">
+            <div>How can I pay for GrubFood?</div>
+            <span class="material-symbols-outlined faq-sign">
+              add
+            </span>
+          </button>
+          <div class="content">
+            <span class="material-symbols-outlined faq-sign">
+              subdirectory_arrow_right
+            </span>
+            <p>GrubFood accepts a variety of payment methods like Debit/Credit Cards, GrubPay, Cash, and even PayPal, as
+              indicated by your primary payment method in the Grub app.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 
