--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
       <ul class="social-links">
         <li>
-          <a class="footer-link" href="https://www.instagram.com/koh_yu_feng/" target="_blank">
+          <a class="footer-link" href="Macrosoft.html" target="_blank">
             <ion-icon class="social-icon" name="logo-instagram"></ion-icon>
           </a>
         </li>
