--- a/Macrosoft.html
+++ b/Macrosoft.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="Macrosoft/style.css" />
   <link rel="stylesheet" href="Macrosoft/nav_arrow.css" />
   <link rel="stylesheet" href="macrosoft/queries.css" />
-  <script defer src="macrosoft/script.js"></script>
+  <script defer src="Macrosoft/script.js"></script>
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
