--- a/Macrosoft.html
+++ b/Macrosoft.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="Macrosoft/style.css" />
   <link rel="stylesheet" href="Macrosoft/nav_arrow.css" />
-  <link rel="stylesheet" href="macrosoft/queries.css" />
+  <link rel="stylesheet" href="Macrosoft/queries.css" />
   <script defer src="Macrosoft/script.js"></script>
 
   <!-- FONTS -->
