--- a/CV.html
+++ b/CV.html
@@ -45,7 +45,7 @@
         <li><a class="main-nav-link" href="index.html#work">Experiences</a></li>
         <li><a class="main-nav-link" href="index.html#motto">Motto</a></li>
         <li><a class="main-nav-link" href="index.html#photos">Photos</a></li>
-        <li><a class="main-nav-link" href="#">Others</a></li>
+        <li><a class="main-nav-link" href="#">CV</a></li>
         <li><a class="main-nav-link" href="old.html">Prior Version</a></li>
       </ul>
     </nav>
@@ -151,6 +151,18 @@
           <div class="technical-skills-blocks">
             <div class="image"><span><img src="CV/css.png" alt=""></span></div>
             <p>Front-end Design</p>
+          </div>
+          <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/umeat2.PNG" alt=""></span></div>
+            <p><a href="uMeat.html" target="_blank">uMeat</a></p>
+          </div>
+          <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/Grub.PNG" alt=""></span></div>
+            <p><a href="Grub.html" target="_blank">Grub</a></p>
+          </div>
+          <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/Macrosoft.PNG" alt=""></span></div>
+            <p><a href="Macrosoft.html" target="_blank">Macrosoft</a></p>
           </div>
         </div>
       </div>
