--- a/Grub.html
+++ b/Grub.html
@@ -9,10 +9,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="Brag/style.css" />
-  <link rel="stylesheet" href="Brag/style_v2.css" />
-  <link rel="stylesheet" href="Brag/queries.css" />
-  <script defer src="Brag/script.js"></script>
+  <link rel="stylesheet" href="Grub/style.css" />
+  <link rel="stylesheet" href="Grub/style_v2.css" />
+  <link rel="stylesheet" href="Grub/queries.css" />
+  <script defer src="Grub/script.js"></script>
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -256,7 +256,7 @@
         </div>
       </div>
       <video autoplay muted loop playsinline class="vid1">
-        <source src="Brag/Brag.mp4" type="video/mp4">
+        <source src="Grub/Grub.mp4" type="video/mp4">
       </video>
     </section>
 
@@ -286,9 +286,9 @@
               <h3>Deliveries</h3>
               <!-- FOOD -->
               <div class="v2">
-                <div><img src="Brag/gallery/food.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/food.jpg" class="v2_img"></div>
                 <div>
-                  <h3><a href="Brag/GrubFood/GrubFood.html" target="_blank">Food</a></h3>
+                  <h3><a href="Grub/GrubFood/GrubFood.html" target="_blank">Food</a></h3>
                   <div>Have all your cravings delivered to your doorstep.</div>
                 </div>
               </div>
@@ -296,7 +296,7 @@
               <div class="empty"></div>
               <!-- MART -->
               <div class="v2">
-                <div><img src="Brag/gallery/mart.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/mart.jpg" class="v2_img"></div>
                 <div>
                   <h3>Mart</h3>
                   <div>Find everything you need - groceries and more.</div>
@@ -306,7 +306,7 @@
               <div class="empty"></div>
               <!-- EXPRESS -->
               <div class="v2 v2_last">
-                <div><img src="Brag/gallery/express.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/express.jpg" class="v2_img"></div>
                 <div>
                   <h3>Express</h3>
                   <div>Send packages, documents, and beyond.</div>
@@ -317,7 +317,7 @@
               <h3>Mobility</h3>
               <!-- RIDES -->
               <div class="v2 v2_last">
-                <div><img src="Brag/gallery/driver.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/driver.jpg" class="v2_img"></div>
                 <div>
                   <h3>Rides</h3>
                   <div>Choose from a variety of vehicles to take you from A to B safely</div>
@@ -328,7 +328,7 @@
               <h3>Financial Services</h3>
               <!-- PAY -->
               <div class="v2">
-                <div><img src="Brag/gallery/pay.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/pay.jpg" class="v2_img"></div>
                 <div>
                   <h3>Pay</h3>
                   <div>Secure and seamless cashless payments, online and in-store.</div>
@@ -338,7 +338,7 @@
               <div class="empty"></div>
               <!-- INSURANCE -->
               <div class="v2">
-                <div><img src="Brag/gallery/insurance.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/insurance.jpg" class="v2_img"></div>
                 <div>
                   <h3>Insurance</h3>
                   <div>Get everyday protection with accessible insurance.</div>
@@ -348,7 +348,7 @@
               <div class="empty"></div>
               <!-- Invest -->
               <div class="v2">
-                <div><img src="Brag/gallery/invest.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/invest.jpg" class="v2_img"></div>
                 <div>
                   <h3>Invest</h3>
                   <div>Invest on your terms and watch your money grow.</div>
@@ -363,9 +363,9 @@
               <h3>Deliveries</h3>
               <!-- FOOD -->
               <div class="v2">
-                <div><img src="Brag/gallery/food.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/food.jpg" class="v2_img"></div>
                 <div>
-                  <h3><a href="Brag/GrubFood/GrubFood.html" target="_blank">Food</a></h3>
+                  <h3><a href="Grub/GrubFood/GrubFood.html" target="_blank">Food</a></h3>
                   <div>Have all your cravings delivered to your doorstep.</div>
                 </div>
               </div>
@@ -373,7 +373,7 @@
               <div class="empty"></div>
               <!-- MART -->
               <div class="v2">
-                <div><img src="Brag/gallery/mart.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/mart.jpg" class="v2_img"></div>
                 <div>
                   <h3>Mart</h3>
                   <div>Find everything you need - groceries and more.</div>
@@ -383,7 +383,7 @@
               <div class="empty"></div>
               <!-- EXPRESS -->
               <div class="v2 v2_last">
-                <div><img src="Brag/gallery/express.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/express.jpg" class="v2_img"></div>
                 <div>
                   <h3>Express</h3>
                   <div>Send packages, documents, and beyond.</div>
@@ -394,7 +394,7 @@
               <h3>Mobility</h3>
               <!-- RIDES -->
               <div class="v2 v2_last">
-                <div><img src="Brag/gallery/driver.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/driver.jpg" class="v2_img"></div>
                 <div>
                   <h3>Rides</h3>
                   <div>Choose from a variety of vehicles to take you from A to B safely</div>
@@ -405,7 +405,7 @@
               <h3>Financial Services</h3>
               <!-- PAY -->
               <div class="v2">
-                <div><img src="Brag/gallery/pay.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/pay.jpg" class="v2_img"></div>
                 <div>
                   <h3>Pay</h3>
                   <div>Secure and seamless cashless payments, online and in-store.</div>
@@ -415,7 +415,7 @@
               <div class="empty"></div>
               <!-- INSURANCE -->
               <div class="v2">
-                <div><img src="Brag/gallery/insurance.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/insurance.jpg" class="v2_img"></div>
                 <div>
                   <h3>Insurance</h3>
                   <div>Get everyday protection with accessible insurance.</div>
@@ -425,7 +425,7 @@
               <div class="empty"></div>
               <!-- Invest -->
               <div class="v2">
-                <div><img src="Brag/gallery/invest.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/invest.jpg" class="v2_img"></div>
                 <div>
                   <h3>Invest</h3>
                   <div>Invest on your terms and watch your money grow.</div>
@@ -439,7 +439,7 @@
               <h3>Earn with Grub</h3>
               <!-- DRIVE WITH US -->
               <div class="v2">
-                <div><img src="Brag/gallery/drivewithus.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/drivewithus.jpg" class="v2_img"></div>
                 <div>
                   <h3>Drive with us</h3>
                   <div>Be the boss of your own working hours.</div>
@@ -449,7 +449,7 @@
               <div class="empty"></div>
               <!-- DELIVER WITH US -->
               <div class="v2">
-                <div><img src="Brag/gallery/deliverwithus.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/deliverwithus.jpg" class="v2_img"></div>
                 <div>
                   <h3>Deliver with us</h3>
                   <div>Make deliveries and earn extra income.</div>
@@ -463,7 +463,7 @@
               <h3>Grow your business</h3>
               <!-- SELL WITH US -->
               <div class="v2">
-                <div><img src="Brag/gallery/sellwithus.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/sellwithus.jpg" class="v2_img"></div>
                 <div>
                   <h3>Sell with us</h3>
                   <div>Become a Grub merchant-partner and increase your reach.</div>
@@ -473,7 +473,7 @@
               <div class="empty"></div>
               <!-- PAYMENTS WITH US -->
               <div class="v2">
-                <div><img src="Brag/gallery/paymentwithus.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/paymentwithus.jpg" class="v2_img"></div>
                 <div>
                   <h3>Payments with us</h3>
                   <div>Simplify transactions with secure GrubPay cashless payments.</div>
@@ -487,7 +487,7 @@
               <h3>GrubForBusiness</h3>
               <!-- EXPRESS -->
               <div class="v2">
-                <div><img src="Brag/gallery/express2.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/express2.jpg" class="v2_img"></div>
                 <div>
                   <h3>Express</h3>
                   <div>On-demand package deliveries for your corporate needs.</div>
@@ -497,7 +497,7 @@
               <div class="empty"></div>
               <!-- FOOD -->
               <div class="v2">
-                <div><img src="Brag/gallery/food2.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/food2.jpg" class="v2_img"></div>
                 <div>
                   <h3>Food</h3>
                   <div>Manage orders for all employees and business occasions.</div>
@@ -507,7 +507,7 @@
               <div class="empty"></div>
               <!-- BUSINESS RIDES -->
               <div class="v2">
-                <div><img src="Brag/gallery/businessrides.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/businessrides.jpg" class="v2_img"></div>
                 <div>
                   <h3>Business rides</h3>
                   <div>Book and manage rides for employees, visitors, and guests.</div>
@@ -517,7 +517,7 @@
               <div class="empty"></div>
               <!-- FINANCIAL SERVICES -->
               <div class="v2">
-                <div><img src="Brag/gallery/financialservices.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/financialservices.jpg" class="v2_img"></div>
                 <div>
                   <h3>Financial services</h3>
                   <div>Secure funding for your business goals.</div>
@@ -527,7 +527,7 @@
               <div class="empty"></div>
               <!-- GIFT CARDS -->
               <div class="v2">
-                <div><img src="Brag/gallery/giftcards.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/giftcards.jpg" class="v2_img"></div>
                 <div>
                   <h3>Gift cards</h3>
                   <div>For your corporate gifting and promotional needs.</div>
@@ -537,7 +537,7 @@
               <div class="empty"></div>
               <!-- ADS -->
               <div class="v2 v2_last">
-                <div><img src="Brag/gallery/ads.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/ads.jpg" class="v2_img"></div>
                 <div>
                   <h3>Ads</h3>
                   <div>Connect your business with millions, online and offline.</div>
@@ -548,7 +548,7 @@
               <h3>GrubDefence</h3>
               <!-- FRAUD MANAGEMENT -->
               <div class="v2">
-                <div><img src="Brag/gallery/fraud.jpg" class="v2_img"></div>
+                <div><img src="Grub/gallery/fraud.jpg" class="v2_img"></div>
                 <div>
                   <h3>Fraud Management</h3>
                   <div>Protect your business from fraud.</div>
@@ -565,10 +565,10 @@
     <section class="newsroom">
       <p class="newsroom-header">Newsroom</p>
       <div class="newsroom-gallery">
-        <img src="Brag/gallery/newsroom1.jpg" class="newsroom-img">
-        <img src="Brag/gallery/newsroom2.jpg" class="newsroom-img">
-        <img src="Brag/gallery/newsroom3.jpg" class="newsroom-img">
-        <img src="Brag/gallery/newsroom4.jpg" class="newsroom-img">
+        <img src="Grub/gallery/newsroom1.jpg" class="newsroom-img">
+        <img src="Grub/gallery/newsroom2.jpg" class="newsroom-img">
+        <img src="Grub/gallery/newsroom3.jpg" class="newsroom-img">
+        <img src="Grub/gallery/newsroom4.jpg" class="newsroom-img">
         <div>Read More</div>
         <div>Read More</div>
         <div>Read More</div>
