--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a class="main-nav-link" href="#work">Experiences</a></li>
         <li><a class="main-nav-link" href="#motto">Motto</a></li>
         <li><a class="main-nav-link" href="#photos">Photos</a></li>
-        <li><a class="main-nav-link" href="CV.html">Others</a></li>
+        <li><a class="main-nav-link" href="CV.html">CV</a></li>
         <li><a class="main-nav-link" href="old.html">Prior Version</a></li>
       </ul>
     </nav>
