--- a/uMeat.html
+++ b/uMeat.html
@@ -36,7 +36,6 @@
 <body>
   <header class="header">
     <a href="#" class="header1"><img src="uMeat/umeat1.PNG" class="nav-img"></a>
-
     <nav class="main-nav">
       <ul class="main-nav-list">
         <img src="uMeat/umeat1.PNG" class="nav-img2">
@@ -393,7 +392,7 @@
 </body>
 
 <footer class="footer">
-  <div class="container grid grid--footer">
+  <div class="grid grid--footer">
     <div class="logo-col">
       <a class="footer-logo">
         <p><strong>Other Social Media Channels:</strong></p>
