--- a/CV.html
+++ b/CV.html
@@ -164,6 +164,10 @@
             <div class="image"><span><img src="CV/Macrosoft.PNG" alt=""></span></div>
             <p><a href="Macrosoft.html" target="_blank">Macrosoft</a></p>
           </div>
+          <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/NenjaVan.PNG" alt=""></span></div>
+            <p><a href="NenjaVan.html" target="_blank">NenjaVan</a></p>
+          </div>
         </div>
       </div>
     </section>
