--- a/index.html
+++ b/index.html
@@ -314,17 +314,17 @@
 
       <ul class="social-links">
         <li>
-          <a class="footer-link" href="Macrosoft.html" target="_blank">
+          <a class="footer-link" href="https://www.instagram.com/koh_yu_feng/" target="_blank">
             <ion-icon class="social-icon" name="logo-instagram"></ion-icon>
           </a>
         </li>
         <li>
-          <a class="footer-link" href="Grub.html" target="_blank">
+          <a class="footer-link" href="https://www.facebook.com/KohYuFeng/" target="_blank">
             <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
           </a>
         </li>
         <li>
-          <a class="footer-link" href="uMeat.html" target="_blank">
+          <a class="footer-link" href="#" target="_blank">
             <ion-icon class="social-icon" name="logo-twitter"></ion-icon>
           </a>
         </li>
