--- a/Macrosoft.html
+++ b/Macrosoft.html
@@ -114,8 +114,7 @@
         <div class="intro-sub-box">
           <h1>Surface Pro 7+</h1>
           <div>Buy any Surface Pro 7+ and get a free Type Cover (worth S$199). Plus for a limited time only, get a
-            free
-            Mobile Mouse (worth S$54)</div>
+            free Mobile Mouse (worth S$54)</div>
           <div><a href="#">Shop now</a></div>
         </div>
         <div>
@@ -133,11 +132,27 @@
         </div>
         <div><img src="Macrosoft/gallery/intro1.PNG" class="intro-img"></div>
       </div>
+
+      <!-- 3RD SLIDER -->
+      <div class="intro-box slider__slide">
+        <div class="intro-sub-box">
+          <h1>Surface Pro 8+</h1>
+          <div>Get your hands on the fastest performing Surface Pro device today at only
+            S$1,990. Limited time promotion with 2-years extended warranty.
+          </div>
+          <div><a href="#">Shop now</a></div>
+        </div>
+        <div><img src="Macrosoft/gallery/intro3.PNG" class="intro-img"></div>
+      </div>
+
+
+
       <!-- NAV ARROWS & BREADCRUMBS -->
       <div id="nav-button--prev" class="slider__nav-button"></div>
       <div id="nav-button--next" class="slider__nav-button"></div>
       <div class="slider__nav">
         <div class="slider__navlink active"></div>
+        <div class="slider__navlink"></div>
         <div class="slider__navlink"></div>
       </div>
     </section>
