--- a/Macrosoft.html
+++ b/Macrosoft.html
@@ -142,7 +142,7 @@
           </div>
           <div><a href="#">Shop now</a></div>
         </div>
-        <div><img src="Macrosoft/gallery/intro3.PNG" class="intro-img"></div>
+        <div><img src="Macrosoft/gallery/intro3.png" class="intro-img"></div>
       </div>
 
 
