--- a/NenjaVan.html
+++ b/NenjaVan.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" href="NenjaVan/style.css" />
   <link rel="stylesheet" href="NenjaVan/style_v2.css" />
