--- a/NenjaVan.html
+++ b/NenjaVan.html
@@ -141,7 +141,7 @@
           <h1>2,000,000+</h1>
           <div>parcels delivered every day</div>
         </div>
-        <div>
+        <div class="stats-sub-grid_2">
           <h1>100%</h1>
           <div>coverage in Southeast Asia</div>
         </div>
