--- a/CV.html
+++ b/CV.html
@@ -168,6 +168,10 @@
             <div class="image"><span><img src="CV/NenjaVan.PNG" alt=""></span></div>
             <p><a href="NenjaVan.html" target="_blank">NenjaVan</a></p>
           </div>
+          <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/Hahamove.png" alt=""></span></div>
+            <p><a href="Hahamove.html" target="_blank">Hahamove</a></p>
+          </div>
         </div>
       </div>
     </section>
