--- a/CV.html
+++ b/CV.html
@@ -172,6 +172,10 @@
             <div class="image"><span><img src="CV/Hahamove.png" alt=""></span></div>
             <p><a href="Hahamove.html" target="_blank">Hahamove</a></p>
           </div>
+          <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/Benjamin Darker.PNG" alt=""></span></div>
+            <p><a href="Benjamin Darker.html" target="_blank">Benjamin Darker</a></p>
+          </div>
         </div>
       </div>
     </section>
