--- a/CV.html
+++ b/CV.html
@@ -161,6 +161,10 @@
             <p><a href="Grub.html" target="_blank">Grub</a></p>
           </div>
           <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/GrubFood.PNG" alt=""></span></div>
+            <p><a href="GrubFood.html" target="_blank">GrubFood</a></p>
+          </div>
+          <div class="technical-skills-blocks">
             <div class="image"><span><img src="CV/Macrosoft.PNG" alt=""></span></div>
             <p><a href="Macrosoft.html" target="_blank">Macrosoft</a></p>
           </div>
