--- a/index.html
+++ b/index.html
@@ -53,17 +53,14 @@
       <div class="introduction1">
         <div class="intro-text-box">
           <h1 class="heading-primary">
-            Hello, こんにちは, 你好, Namaste, Bonjour, Olá!</h1>
+            Hello, Selamat Pagi, こんにちは, 你好!</h1>
           <p class="intro-description">
-            Nice to e-meet you! 👋 I'm Darius Koh, and I'm currently working as a Regional Financial Analyst
-            with Siemens Healthineers in Singapore.</p>
+            Nice to e-meet you! 👋 I'm Darius Koh, and I'm currently working as a Commercial Finance and FP&A Lead
+            with Siemens Healthineers in Indonesia. </p>
           <p class="intro-description">
-            I'm enthusiastic about learning new skills and knowledge to push
-            myself to greater heights! As I am really keen in building an online personal webpage,
-            I decided to embark on a journey to learn Web Development.😊</p>
+            Life is a learning journey and being an enthusiast of personal growth, I embarked on a journey to learn basic Web Development since 2022. During my free time, I practise HTML & CSS coding by taking inspiration from corporate websites and remodelling them. You may find link to my works under the "CV" section. 😊</p>
           <p class="intro-description">
-            If you have any ideas or recommendations to improve my site, please
-            feel free to connect with me on LinkedIn and let's have coffee together! ☕</p>
+            Please don't roast me if my webpage is distored or poorly formatted - I am still a newbie learning with trial and error.🥲 Nevertheless, if you have any ideas or recommendations to improve my site, let's connect on LinkedIn and chat together! ☕</p>
           <a class="linkedin" href="https://www.linkedin.com/in/darius-koh-yu-feng/" target="_blank""><strong>Find Me Here!</strong></a>
         </div>
         <div class=" intro-imgbox">
@@ -167,6 +164,19 @@
       <div class="main">
         <div class="box">
           <div class="box-img">
+            <img src="work/SHS.jpg">
+          </div>
+          <div class="content">
+            <h4>Siemens Healthineers</h4>
+            <p>Commercial Finance, FP&A Lead</p>
+            <div>💫 Leads a team of 3 senior analysts on commercial finance and business performance controlling tasks, handles strategic projects and reports monthly forecast updates plus insights directly to CEO and CFO</div>
+          </div>
+          <div class="button">
+            <a href="https://www.siemens-healthineers.com/" target="_blank">Website</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
             <img src="work/EY.JPG">
           </div>
           <div class="content">
@@ -191,7 +201,6 @@
             <div>🔎 Researched on Seed to Series A investment opportunities in key sectors within Asia</div>
             <div>🎟 Assisted senior managers with due diligence checks on financial data (e.g. cohort analysis and
               review of unit economics)</div>
-            <div>🧾 Prepared pitchbooks for management reviews</div>
           </div>
           <div class="button">
             <a href="https://www.globalfounderscapital.com/" target="_blank">Website</a>
@@ -275,6 +284,10 @@
         </h2>
         <div class="wrapper">
           <div class="gallery">
+            <div class="image"><span><img src="photos/img13.jpg" alt=""></span></div>
+            <div class="image"><span><img src="photos/img14.jpg" alt=""></span></div>
+            <div class="image"><span><img src="photos/img15.jpg" alt=""></span></div>
+            <div class="image"><span><img src="photos/img16.jpg" alt=""></span></div>
             <div class="image"><span><img src="photos/img1.png" alt=""></span></div>
             <div class="image"><span><img src="photos/img2.png" alt=""></span></div>
             <div class="image"><span><img src="photos/img3.png" alt=""></span></div>
@@ -331,7 +344,7 @@
       </ul>
 
       <p class="copyright">
-        Copyright &copy; <span class="year">2022</span> by Darius Koh Yu Feng.
+        Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng.
         All rights reserved.
       </p>
     </div>
